First Meeting update

--- a/README
+++ b/README
@@ -1,1 +1,10 @@
+Start Date: 2/5/2020
+
+Meetings: Every Wednesday @ 8 pm PST
+
+Team Members: Michael, Qianti, Nicolas
+
+Goals for 1st Week:
+1. Download data locally
+2. Create individual jupyter notebook on github to include data exploration work
 
