--- a/README
+++ b/README
@@ -18,19 +18,26 @@ Goals for 2nd Week:
 3. Data Preprocessing
 
 +-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
-Goals for 2nd Week:
-1. Peer Code Review 
+Goals for 3rd Week:
+1. Peer Code Review xxx
   - due Wednesday ?PM (maybe 4pm?)
   - write comments for others in <Code Review>
-2. Model Prototype
+2. Model Prototype 
   - research existing sentimental analysis models and build a simple prototype 
-2. Data Exploration 
+3. Data Exploration 
   - Consider the potential types of bad input for the model (ex: neutral reviews)
-  - Further insights on NLP & Tokenization
+  - Further insights on NLP & Tokenization  xxx
   - Summerize findings/insights in the <Insights on Dataset>
 
-+-+-+-+-+-+-+-Model Objectives-+-+-+-+-+-+-+
++-+-+-+-+-+-+-Model Objectives-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
 Input: a review/summary/both from the dataset
-Output: Binary sentimental results --- positive/negative
+Output: Binary sentimental results --- positive/negative ---  0/1 or scale in [0,1] 
 Compare the model results with actual ratings 
-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
++-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+
+Goals for 4th Week:
+1. No Code Review -- but read each other's codes before meeting
+2. Different Model Prototype 
+3. More insights 
+
+
