Adding some descriptions

--- a/Nic/Week 1 Nic's Exploratory Analysis.ipynb
+++ b/Nic/Week 1 Nic's Exploratory Analysis.ipynb
@@ -3511,7 +3511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3530,13 +3530,25 @@
     "    # Substituting multiple spaces with single space\n",
     "    processed_feature = re.sub(r'\\s+', ' ', processed_feature, flags=re.I)\n",
     "\n",
-    "    # Removing prefixed 'b'\n",
-    "    processed_feature = re.sub(r'^b\\s+', '', processed_feature)\n",
-    "\n",
     "    # Converting to Lowercase\n",
     "    processed_feature = processed_feature.lower()\n",
     "\n",
     "    processed_features.append(processed_feature)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tokenizing our data using TF-IDF feature vectors\n",
+    "- The reason we are using TF-IDF vs. a bag of words approach is two fold:\n",
+    "       1. A bag of words approach only looks at word frequency, while the TF-IDF puts more weight towards words that appear less often in all the documents, yet more in individual documents.\n",
+    "       2. TF-IDF leads to better results than bag of words (typically).\n",
+    "       \n",
+    "- In our case below, we set:\n",
+    "       - max_features to 2500 (limiting the number to 2500 of the most frequent words)\n",
+    "       - min_df to 7 (a word needs to appear in at least 7 documents)\n",
+    "       - max_df = 0.8 (a word can appear in up to 80% of all documents -> too high of a frequency isn't helpful)"
    ]
   },
   {
@@ -3548,7 +3560,7 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "vectorizer = TfidfVectorizer (max_features=2500, min_df=7, max_df=0.8)\n",
-    "processed_features = vectorizer.fit_transform(processed_features).toarray()"
+    "processed_features1 = vectorizer.fit_transform(processed_features).toarray()"
    ]
   },
   {
@@ -3560,6 +3572,18 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(processed_features, labels, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Deciding on which ML model to run:\n",
+    "- We used a RandomForestClassifier because:\n",
+    "    1. It is better for cases of non-normalized text (which I think we have)\n",
+    "           - non-normalized text can include acronymns, numbers, dates, and abbreviations\n",
+    "    2. Hopefully it compares better than other models, but that needs to be tested.\n",
+    "- Ideally we can test again logistic regression, SVM, or KNN"
    ]
   },
   {
@@ -3604,7 +3628,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3637,13 +3663,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Concat summary and text\n",
-    "# Helpfulness ratio * denominator"
+    "vectorizer1 = TfidfVectorizer() #(max_features=2500, min_df=7, max_df=0.8)\n",
+    "processed_features2 = vectorizer.fit_transform(processed_features).toarray()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train2, X_test2, y_train2, y_test2 = train_test_split(processed_features2, labels, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+       "                       criterion='gini', max_depth=None, max_features='auto',\n",
+       "                       max_leaf_nodes=None, max_samples=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, n_estimators=200,\n",
+       "                       n_jobs=None, oob_score=False, random_state=0, verbose=0,\n",
+       "                       warm_start=False)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_classifier2 = RandomForestClassifier(n_estimators=200, random_state=0)\n",
+    "text_classifier2.fit(X_train2, y_train2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions2 = text_classifier2.predict(X_test2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3673    24  7672]\n",
+      " [  427   108  5543]\n",
+      " [  297    19 61261]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "    Negative       0.84      0.32      0.47     11369\n",
+      "     Neutral       0.72      0.02      0.03      6078\n",
+      "    Positive       0.82      0.99      0.90     61577\n",
+      "\n",
+      "    accuracy                           0.82     79024\n",
+      "   macro avg       0.79      0.45      0.47     79024\n",
+      "weighted avg       0.82      0.82      0.77     79024\n",
+      "\n",
+      "0.8230664102044949\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test2,predictions2))\n",
+    "print(classification_report(y_test2,predictions2))\n",
+    "print(accuracy_score(y_test2, predictions2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
