--- a/README
+++ b/README
@@ -40,4 +40,8 @@ Goals for 4th Week:
 2. Different Model Prototype 
 3. More insights 
 
++-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+
+Goals for 5th Week:
+1. Try different prototypes
+2. Finish up the sentimental analysis. Work on other aspects or move to another Kaggle challenge next week!
 
